--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,24 @@
 .App {
   max-height: 100vh;
+  padding: 2% 4%;
 }
 
-header {
-  position: absolute;
-  top: 2%;
-  left: 4%;
-}
-
-.Map {
-  max-height: 100vh;
+.map-container {
+  height: 100vh;
+  width: 70%;
+  margin: 0 auto;
+  position: relative;
 }
 
 .Map img {
   position: absolute;
-  top: 10%;
-  left: 15%;
-  width: 70%;
+  width: 100%;
+}
+
+.location-pins {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
