made sidebar scroll

--- a/src/App.css
+++ b/src/App.css
@@ -44,15 +44,18 @@
 }
 
 .sidebar {
-  display: none;
+  visibility: hidden;
+  position: absolute;
+  width: 25vw;
+  top: 0;
+  right: -25vw;
+  height: 100vh;
+  background: white;
+  transition: all .8s ease;
 }
 
 .sidebar.open {
-  display: block;
-  position: absolute;
-  top: 0;
+  visibility: visible;
   right: 0;
-  height: 100vh;
-  width: 25vw;
 }
 
