--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,72 @@
+body {
+  overflow: hidden;
+}
+
 .App {
   max-height: 100vh;
-  padding: 2vh 3vw;
+  padding: 2vh 0;
+}
+
+* {
+  transition: all .8s ease;
+}
+
+h1 {
+  margin: 5px 0;
+  font-size: 4em;
+}
+
+h2 {
+  font-size: 3em;
+}
+
+h3 {
+  font-size: 2em;
+}
+
+h4 {
+  font-size: 1em;
+}
+
+h5 {
+  font-size: 1em;
+  margin: 0;
+  color: grey;
+  text-transform: uppercase;
 }
 
 .Header {
-  height: 16vh;
+  margin: 4vh 3vw;
+  position: relative;
+}
+
+.Header p {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 30vw;
+  margin: 0;
+  font-size: 0.8em;
+  line-height: 2em;
+  color: #666;
+  text-align: right;
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+.Header p > b {
+  display: block;
+  color: #333;
+  font-size: 1.5em;
+  margin-bottom: 10px;
+}
+
+main.sidebar-open {
+  transform: translateX(-30%);
 }
 
 .map-container {
-  width: 70%;
+  width: 60%;
   margin: 0 auto;
   position: relative;
 }
@@ -17,45 +75,55 @@
   width: 100%;
 }
 
-.location-pins {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
 .Pin {
   position: absolute;
 }
 
 .Pin * {
   display: inline-block;
+  vertical-align: bottom;
 }
 
 .Pin img {
-  width: 50px;
+  width: 30px;
 }
 
-.Pin h5 {
+.Pin h4 {
   color: #333;
-  font-size: 30px;
-  line-height: 100%;
+  font-size: 20px;
+  margin: 0 5px;
+  line-height: 30px;
 }
 
 .sidebar {
   visibility: hidden;
   position: absolute;
-  width: 25vw;
+  width: 30vw;
   top: 0;
-  right: -25vw;
+  right: -30vw;
   height: 100vh;
   background: white;
-  transition: all .8s ease;
+  border-left: 1px solid grey;
+  padding: 3vh 0;
 }
 
 .sidebar.open {
   visibility: visible;
   right: 0;
+  padding: 3vh 3vw;
+}
+
+.sidebar span {
+  display: inline-block;
+  background: blue;
+  border-radius: 50%;
+  padding: 5px;
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  vertical-align: middle;
+  color: white;
+  margin-right: 15px;
 }
 
