--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 .App {
@@ -127,3 +127,9 @@ main.sidebar-open {
   margin-right: 15px;
 }
 
+.source-selector {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 3vh 3vw;
+}
