--- a/src/App.css
+++ b/src/App.css
@@ -117,6 +117,10 @@ main.sidebar-open {
   transition: all .8s ease;
 }
 
+.sidebar img {
+  width: 100%;
+}
+
 .sidebar.open {
   visibility: visible;
   right: 0;
@@ -159,7 +163,6 @@ main.sidebar-open {
   margin: 0 5px;
   text-align: center;
   box-sizing: content-box;
-  background: white;
 }
 
 .mode-options:after {
@@ -176,6 +179,7 @@ main.sidebar-open {
 
 .mode-options.showing {
   visibility: visible;
+  background: white;
 }
 
 .mode-options.hidden {
